discussion/kv_engine/187792/187792_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

Change the protocol specification to be usable on the server

Uniquely identify the "URL" of a document by inserting
the scope id, collection id, vbucket id in the request.
By keeping this in its own message we only need to
document it once (and changes / bug fixes only needs
to be fixed in one place rather in all messages which
needs the extension later on)

The scope/collection id vs names is an optimization so
that the server don't need to perform the textual lookup
every time (and in order for sane operation the client
would have to pass along the uuid to avoid undefined
behavior after a drop/recreate).

By passing along the vbucket id the server don't need
to be in the "proxy business" and can leave that to
a stellar gateway or the client. (The stellar gateway
could tell the clients that it is responsible for all
vbuckets and perform all proxying and not-my-vbucket
handling).

I've not looked at the returned data.

Change-Id: I98a9140b99b11540c5b2a6b94096b63d8c842551

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-07 13:27:16.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-07 14:09:03.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43883/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43883/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52317/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52317/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22867/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_arithmetic_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_mutate_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_remove_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_service.cc:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_unlock_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:17:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22867/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_arithmetic_command.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22867/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23095/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/programs/grpc/main.cc b/programs/grpc/main.cc
index 19ac9a533..52415ce5d 100644
--- a/programs/grpc/main.cc
+++ b/programs/grpc/main.cc
@@ -33,8 +33,7 @@ void updateDocumentLocation(const nlohmann::json&amp; j,
         location.set_bucket(j.at(&quot;bucket_name&quot;).get&lt;std::string&gt;());
     }
     if (j.contains(&quot;collection_id&quot;)) {
-        location.set_collection_id(
-                j.at(&quot;collection_id&quot;).get&lt;uint32_t&gt;());
+        location.set_collection_id(j.at(&quot;collection_id&quot;).get&lt;uint32_t&gt;());
     }
 
     if (j.contains(&quot;scope_name&quot;)) {
@@ -84,19 +83,22 @@ void to_json(nlohmann::json&amp; json, const UnlockResponse&amp; response) {
 void from_json(const nlohmann::json&amp; j, MutateRequest&amp; request) {
     updateDocumentLocation(j, *request.mutable_document());
     if (j.contains(&quot;content&quot;)) {
-        request.mutable_content()-&gt;set_content(j.at(&quot;content&quot;).get&lt;std::string&gt;());
+        request.mutable_content()-&gt;set_content(
+                j.at(&quot;content&quot;).get&lt;std::string&gt;());
     }
     if (j.contains(&quot;content-type&quot;)) {
         if (j[&quot;content-type&quot;] == &quot;json&quot;) {
             request.mutable_content()-&gt;set_content_type(Value_ContentType_JSON);
         } else if (j[&quot;content-type&quot;] == &quot;binary&quot;) {
-            request.mutable_content()-&gt;set_content_type(Value_ContentType_BINARY);
+            request.mutable_content()-&gt;set_content_type(
+                    Value_ContentType_BINARY);
         }
     }
 
     if (j.contains(&quot;compression-type&quot;)) {
         if (j[&quot;compression-type&quot;] == &quot;snappy&quot;) {
-            request.mutable_content()-&gt;set_compression_type(Value_CompressionType_SNAPPY);
+            request.mutable_content()-&gt;set_compression_type(
+                    Value_CompressionType_SNAPPY);
         }
     }
 

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23095/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25387/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25387/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24502/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24502/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1667/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12599/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26241/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24930/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33346/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12679/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
